--- a/Ev_fiyat_tahmini.ipynb
+++ b/Ev_fiyat_tahmini.ipynb
@@ -347,6 +347,8 @@
       "source": [
         " # Veri setindeki parametreler ve açıklamaları\n",
         "\n",
+        "Each record in the database describes a Boston suburb or town. The data was drawn from the Boston Standard Metropolitan Statistical Area (SMSA) in 1970. The attributes are deﬁned as follows (taken from the UCI Machine Learning Repository1): CRIM: per capita crime rate by town",
+        
         " # CRIM     per capita crime rate by town\n",
         " # ZN       proportion of residential land zoned for lots over 25,000 sq.ft.\n",
         " # INDUS    proportion of non-retail business acres per town\n",
