--- a/Ev_fiyat_tahmini.ipynb
+++ b/Ev_fiyat_tahmini.ipynb
@@ -347,9 +347,9 @@
       "source": [
         " # Veri setindeki parametreler ve açıklamaları\n",
         "\n",
-        " # Each record in the database describes a Boston suburb or town.", 
-        " # The data was drawn from the Boston Standard Metropolitan Statistical Area (SMSA) in 1970.", 
-        " # The attributes are deﬁned as follows (taken from the UCI Machine Learning Repository1):",
+        " # Each record in the database describes a Boston suburb or town.\n", 
+        " # The data was drawn from the Boston Standard Metropolitan Statistical Area (SMSA) in 1970.\n", 
+        " # The attributes are deﬁned as follows (taken from the UCI Machine Learning Repository1):\n",
         " # CRIM     per capita crime rate by town\n",
         " # ZN       proportion of residential land zoned for lots over 25,000 sq.ft.\n",
         " # INDUS    proportion of non-retail business acres per town\n",
